<?xml version="1.0"?>
<package format="2">
  <name>robot_interface</name>
  <version>0.0.0</version>
  <description>The robot_interface package</description>

  <maintainer email="stz@todo.todo">stz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robot_core_msgs</build_depend>
  <build_depend>controller_manager</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robot_core_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_core_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
